# C-_Snake

./: CMakeLists.txt  Food.cpp  Food.h  Snake.cpp  Snake.h  main.cpp  snakeData.txt
